add tests for user controller, taxi controller, minor fixes
